# hoops

./: .gitattributes  .gitignore  README.md  analyze_results.py  apply_kenpom_mapping.py  check_submission.py  compare_models.py  config.yaml  examine_kenpom.py  fix_features.py  generate_predictions.py  generate_test_data.py  hello.py  load_and_predict.py  pyproject.toml  quick_model.py  quickstart.py  rebuild_models.py  requirements.txt  run_pipeline.py  team_name_matcher.py  validate_kenpom.py  visualize_features.py
docs/: performance_tracking.md  quick_start.md  system_overview.md
march-machine-learning-mania-2025/: MGameCities.csv  MMasseyOrdinals.csv  MRegularSeasonCompactResults.csv  MRegularSeasonDetailedResults.csv  MTeamCoaches.csv  MTeamSpellings.csv  WConferenceTourneyGames.csv  WGameCities.csv  WNCAATourneyDetailedResults.csv  WRegularSeasonCompactResults.csv  WRegularSeasonDetailedResults.csv  WTeamSpellings.csv
models/: gbm_model.pkl  lr_model.pkl
notebooks/: test.ipynb
scripts/: download_kenpom_data.py  generate_requirements.py  install_minimal.py  setup_credentials.py
src/: ._ingest.py  main.py  project_setup.py  run_pipeline.py  validate_submission.py
src/data/: download.py  kenpom_collector.py  preprocess.py  preprocessing.py  team_mapper.py  womens_basketball_data.py
src/data_processing/: load_data.py
src/evaluation/: validate_model.py
src/feature_engineering/: build_features.py  conference_tourney_features.py  create_matchups.py
src/features/: engineer.py  integrator.py  performance_tracker.py  validator.py
src/modeling/: make_predictions.py  train_model.py
src/models/: predict_model.py  train_model.py
src/utils/: credentials.py
